# veterinary_assistant

./: .env  README.md  pyproject.toml  report.md
reports/: 0791ec17-cf78-4b52-a78f-7b1d58e4ec2a.md  148ab302-2c95-4988-b053-f667be975602.md  1d385d88-20f8-4983-a1fc-cad0a2ccc587.md  2e7b7946-fc41-4aac-b3ff-8238fc8988fa.md  42b05d13-a5e5-4736-a639-a24207d9445a.md  a06545bd-b52d-4c93-9083-a75d240fca6c.md  b6589721-4adb-4230-8942-aab61e16b9b2.md  c0cad836-a19d-4697-8d9d-2b1ae0278c8a.md  e419750e-5f3f-4546-9f29-8f493f3582a5.md
src/veterinary_assistant/: crew.py  main.py
src/veterinary_assistant/config/: agents.yaml  tasks.yaml
web/: app.py
