[tool.poetry]
name = "veterinary_assistant"
version = "0.1.0"
description = "veterinary_assistant using crewAI"
authors = ["Sammy Ageil"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
veterinary_assistant = "veterinary_assistant.main:run"
train = "veterinary_assistant.main:train"
replay = "veterinary_assistant.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
